[gd_scene load_steps=6 format=3 uid="uid://k2hr1nlbcthi"]

[ext_resource type="Script" uid="uid://u4sjvuleppf5" path="res://utils/DialogueSystem/dialogue_system.gd" id="1_vyf6b"]
[ext_resource type="Animation" uid="uid://bqjgh3o0hb1hh" path="res://art/fade_in.res" id="2_jntfm"]
[ext_resource type="Animation" uid="uid://b0g4yolqy1eik" path="res://art/fade_out.res" id="3_sm5x0"]

[sub_resource type="Animation" id="Animation_jntfm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.247059)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.792157)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sm5x0"]
_data = {
&"RESET": SubResource("Animation_jntfm"),
&"fade_in": ExtResource("2_jntfm"),
&"fade_out": ExtResource("3_sm5x0")
}

[node name="Dialogue System" type="Node2D"]
script = ExtResource("1_vyf6b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.247059)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = 314.0
offset_top = 900.0
offset_right = 670.0
offset_bottom = 1000.0
color = Color(0, 0, 0, 0.792157)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/ColorRect2/MarginContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sm5x0")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
